test/fail/varargs-size-none.grace
method name(first, *params, last) {
  params.at(1)
}

name(object {}, object {})
